Fix regression from [13911] where close icon wouldn't show up for safari in RTL mode.  Refs #6881. Ideally we would only be using absolute positioning of the close icon for left/right aligned tabs (for top/bottom we can use static positioning, standard page flow), but this seems to fix the immediate display issue.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@14068 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/layout/TabContainer_rtl.css
+++ b/themes/tundra/layout/TabContainer_rtl.css
@@ -12,7 +12,7 @@
 	padding: 6px 10px 4px 20px;
 }
 
-.dijitRtl .tundra .dijitTab .closeImage {
+.dj_ie-rtl .tundra .dijitTab .closeImage {
 	position:static;
 	padding: 0px 12px 0px 0px;
 }
